# model-lab

./: .gitattributes  .gitignore  README.md  pyproject.toml
backend/: main.py
frontend/: main.py
frontend/pages/: chatbot.py  chatbot_api.py  chatbot_api_history.py  clip.py  meeting_minutes.py  mybot.py  object_detection.py  segmentation.py
notebooks/: 1_0_huggingface.ipynb  1_0_huggingface.py  1_5_4_mediapipe_face.py  1_5_5_mediapipe_pose.py  1_5_6_mediapipe_holistic.py  1_5_7_mediapipe_collect_data.py  1_5_8_mediapipe_train.ipynb  1_5_9_mediapipe_pred.py  2_seg_fast_sam.ipynb  3_clip.ipynb  4_ocr.ipynb  4_ocr.py  5_1_basic_opencv.ipynb  5_2_video_opencv.py  5_3_media_pipe.py  5_4_media_pipe.py  5_basic_opencv.py  6_llm_api.ipynb  7_stt_tts.ipynb  clip.ipynb  clip.py  object_decection.ipynb  object_decection.py  request_ex.ipynb  request_ex.py  seg_sam_3.ipynb  seg_yolo.ipynb
notebooks/homeworks/: 5_4_media_pipe_1.py  STT.ipynb  TTS.ipynb  media_pipe.py
src/: mybot.py  prompt.md
src/lib/utils/: assets.py  device.py  encrypt_env.py  env.py  path.py  show_image.py
vision_project/: main.py  utils.py
vision_project/pages/: chatbot.py  components.py  object_detection.py
