[project]
name = "model-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bing-image-downloader>=1.1.2",
    "cryptography>=46.0.5",
    "fastapi>=0.133.0",
    "folium>=0.20.0",
    "gdown>=5.2.1",
    "grad-cam>=1.5.5",
    "jupyter>=1.1.1",
    "koreanize-matplotlib>=0.1.1",
    "matplotlib>=3.10.8",
    "nbstripout>=0.9.1",
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyprojroot>=0.3.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "roboflow>=1.2.16",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "setuptools==69.5.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchsummary>=1.5.1",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.3.0",
    "ultralytics>=8.4.22",
    "uuid>=1.30",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126" # 본인의 CUDA 버전에 맞춤
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-gpu", marker = "sys_platform == 'win32'" },
  { index = "pytorch-gpu", marker = "sys_platform == 'linux'" },
]

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = [ 
    "E",   
    "F",   
    "I",   
    "B",   
    "C4",  
    "UP",  
    "N",   
    "SIM", 
]
ignore = [
    "E501",
    "N803",
    'N812',
    'E401',
    'N806',
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"*.py" = ["ANN", "INP001"]

[tool.mypy]
ignore_missing_imports = true

[tool.jupytext]
formats = "ipynb,py:percent"

[dependency-groups]
dev = [
    "jupytext>=1.19.1",
]

